@@ -18,6 +18,7 @@
 - update nsswitch parser to ignore nsswitch sources that aren't supported.
 - check for map key in (possible) alternate map sources when doing lookup.
 - eliminate redundant DNS name lookups.
+- additional fix incorrect pthreads condition handling for mount requests.
  
 14/01/2008 autofs-5.0.3
 -----------------------
